# ykcom

./: .gitignore  LICENSE  README.md  pyproject.toml
src/ykcom/: __init__.py  errors.py  types.py  ykcom.py
tests/: conftest.py  test_as_context_manager.py  test_decoraded_function.py  test_decoraded_method.py  test_ykcom.py
tests/packages_for_testing/: p1.py  p2.py
tools/: check.sh  fixy.sh  mypy.sh  run_tests.sh
